temp fix to some weird dropdown field-row overlap issues; needs more work

--- a/scss/submission-view.scss
+++ b/scss/submission-view.scss
@@ -264,7 +264,7 @@ div.alias-input-field {
 			position: relative;
 
 			&:hover {
-				z-index: 100;
+				z-index: 99;
 			}
 			&:not(:last-child){
 				border-bottom: 1px solid #eee;
